fixed layout issues on product sliders

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -205,6 +205,7 @@ main {
     min-width: 300px;
     font-weight: 600;
     padding-left: 10px;
+    padding-right: 5px;
     
 
     
